# FPGAEnv

./: .env.example  .gitignore  README.md  environment.md  pyproject.toml  task.md  template.md
docs/: reward-hacking.md
src/rlvr_envs/: __init__.py
src/rlvr_envs/core/: __init__.py  ast_guard.py  base_env.py  models.py  sandbox.py  scoring.py
src/rlvr_envs/runtime/: __init__.py  local.py
tests/: conftest.py
tests/adversarial/: test_reward_hacking.py
tests/core/: test_sandbox.py  test_scoring.py
tests/envs/fpga/: test_e2e.py  test_environment.py  test_harness.py  test_parse.py  test_tasks.py  test_vector_strategy.py  test_verilator_parse.py  test_verilog_guard.py
tests/llm_vibe/: run.py
tests/llm_vibe/transcripts/: 2026-04-16_anthropic_claude-sonnet-4.6_adler32.md  2026-04-16_anthropic_claude-sonnet-4.6_bitrev16.md  2026-04-16_anthropic_claude-sonnet-4.6_crc8.md  2026-04-16_anthropic_claude-sonnet-4.6_div16.md  2026-04-16_anthropic_claude-sonnet-4.6_gcd16.md  2026-04-16_anthropic_claude-sonnet-4.6_mul8.md  2026-04-16_anthropic_claude-sonnet-4.6_popcount32.md  2026-04-16_anthropic_claude-sonnet-4.6_xor_cipher16.md  2026-04-19_anthropic_claude-sonnet-4-6_binsearch_8x4.md  2026-04-19_anthropic_claude-sonnet-4-6_graph_reach_4.md  2026-04-19_anthropic_claude-sonnet-4-6_inversion_4x4.md  2026-04-19_anthropic_claude-sonnet-4-6_modexp_small.md  2026-04-19_anthropic_claude-sonnet-4-6_prime_check_u8.md  2026-04-19_anthropic_claude-sonnet-4-6_subset_sum_4x6.md  2026-04-19_deepseek_deepseek-v3.2_popcount32.md  2026-04-19_deepseek_deepseek-v3.2_xor_cipher16.md  (+19 more)
(+11 files in other folders)
